--- a/src/components/Search/search.module.scss
+++ b/src/components/Search/search.module.scss
@@ -14,3 +14,9 @@
     box-shadow: 1px 3px 9px rgba($color: #000000, $alpha: 0.25);
     border-radius: 8px;
 }
+
+@media (max-width:576px) {
+    .input {
+        width: 80%;
+    }
+}
